Correction following to comments of reviewers